2005-10-25  Alexey Shchepin  <alexey@sevcom.net>

	* src/tls/tls.erl: Accept {error,already_loaded} from
	erl_ddll:load_driver/2
	* src/stringprep/stringprep.erl: Likewise
	* src/mod_irc/iconv.erl: Likewise
	* src/ejabberd_app.erl: Likewise

	* src/tls/tls_drv.c: Support for "connect" method
	* src/tls/tls.erl: Likewise

	* src/ejabberd_s2s_in.erl: Support for STARTTLS+Dialback
	* src/ejabberd_s2s_out.erl: Likewise
	* src/ejabberd_receiver.erl: Added a few hacks ({active,once} mode
	should be used instead of recv/3 call to avoid them)
	* src/ejabberd_config.erl: Added s2s_use_starttls and s2s_certfile
	options
	* src/ejabberd.cfg.example: Likewise

2005-10-22  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_app.erl: Try to load tls_drv at startup to avoid
	unloading of libssl (thanks to Brian Campbell)

2005-10-20  Alexey Shchepin  <alexey@sevcom.net>

	* src/odbc/pg.sql: Added spool.seq field for offline messages
	sorting
	* src/mod_offline_odbc.erl: Likewise

2005-10-18  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_roster_odbc.erl: Bugfix

2005-10-16  Alexey Shchepin  <alexey@sevcom.net>

	* src/gen_iq_handler.erl: Bugfix

2005-10-15  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_auth_odbc.erl: Minor fix

	* src/odbc/ejabberd_odbc.erl: Updated pgsql support

	* src/mod_roster_odbc.erl: Bugfix

	* src/ejabberd_c2s.erl: Updated to work correctly with
	mod_vcard_odbc

2005-10-13  Alexey Shchepin  <alexey@sevcom.net>

	* src/odbc/ejabberd_odbc.erl: Experimental support for pgsql
	library

	* src/ejabberd_auth_odbc.erl: Bugfix

	* src/mod_roster_odbc.erl: Bugfix

2005-10-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejd2odbc.erl: Added vCard converter

	* src/mod_vcard_odbc.erl: vCard support via ODBC

	* src/odbc/pg.sql: Updated

2005-09-18  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Updated API for better
	integration with J-EAI web interface

	* src/mod_shared_roster.erl: Now possible to specify all users on